// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly with extra props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container root size-18 theme-light color-sky uui-disabled"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-checkbox"
      disabled={true}
      onChange={null}
      type="checkbox"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      test1
    </span>
  </label>
  <label
    className="container root size-18 theme-light color-sky uui-disabled"
  >
    <input
      aria-checked={true}
      checked={true}
      className="uui-checkbox uui-checked"
      disabled={true}
      onChange={null}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#checkbox-checked.svg"
        />
      </svg>
    </div>
    <span
      className="uui-input-label"
      role="label"
    >
      test2
    </span>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should render with default props 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18 theme-light color-sky"
  >
    <input
      aria-checked={true}
      checked={true}
      className="uui-checkbox uui-checked"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#checkbox-checked.svg"
        />
      </svg>
    </div>
    <span
      className="uui-input-label"
      role="label"
    >
      test1
    </span>
  </label>
  <label
    className="container root size-18 theme-light color-sky"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      test2
    </span>
  </label>
</fieldset>
`;
